--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-baseweb",
+  "name": "daydayup-web",
   "version": "1.0.0",
   "scripts": {
     "dev": "node server.js",
@@ -43,7 +43,8 @@
     "styled-components": "^4.4.1",
     "ts-jest": "^24.2.0",
     "typescript": "^3.7.3",
-    "unstated-next": "^1.1.0"
+    "unstated-next": "^1.1.0",
+    "@zeit/next-css": "^1.0.1"
   },
   "devDependencies": {
     "@types/jest": "^24.0.23",
@@ -51,7 +52,6 @@
     "@types/react": "^16.9.17",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
-    "@zeit/next-css": "^1.0.1",
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-styled-components": "^1.10.6",
     "eslint": "^6.7.2",
