--- a/package.json
+++ b/package.json
@@ -44,9 +44,7 @@
     "ts-jest": "^24.2.0",
     "typescript": "^3.7.3",
     "unstated-next": "^1.1.0",
-    "@zeit/next-css": "^1.0.1"
-  },
-  "devDependencies": {
+    "@zeit/next-css": "^1.0.1",
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.18",
     "@types/react": "^16.9.17",
@@ -54,6 +52,8 @@
     "@typescript-eslint/parser": "^2.12.0",
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-styled-components": "^1.10.6",
+  },
+  "devDependencies": {
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.2",
