--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
     "babel-plugin-import": "^1.13.0",
-    "babel-plugin-styled-components": "^1.10.6",
+    "babel-plugin-styled-components": "^1.10.6"
   },
   "devDependencies": {
     "eslint": "^6.7.2",
