--- a/package.json
+++ b/package.json
@@ -29,13 +29,20 @@
   "dependencies": {
     "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
+    "@types/jest": "^24.0.23",
+    "@types/node": "^12.12.18",
+    "@types/react": "^16.9.17",
+    "@typescript-eslint/eslint-plugin": "^2.12.0",
+    "@typescript-eslint/parser": "^2.12.0",
+    "@zeit/next-css": "^1.0.1",
     "axios": "^0.19.1",
+    "babel-plugin-import": "^1.13.0",
+    "babel-plugin-styled-components": "^1.10.6",
     "cross-env": "^6.0.3",
     "github-markdown-css": "^3.0.1",
     "jest": "^24.9.0",
     "koa": "^2.11.0",
     "koa-router": "^7.4.0",
-    "less": "^3.10.3",
     "material-ui-flat-pagination": "^4.0.0",
     "next": "^9.1.5",
     "react": "^16.8.0",
@@ -43,15 +50,7 @@
     "styled-components": "^4.4.1",
     "ts-jest": "^24.2.0",
     "typescript": "^3.7.3",
-    "unstated-next": "^1.1.0",
-    "@zeit/next-css": "^1.0.1",
-    "@types/jest": "^24.0.23",
-    "@types/node": "^12.12.18",
-    "@types/react": "^16.9.17",
-    "@typescript-eslint/eslint-plugin": "^2.12.0",
-    "@typescript-eslint/parser": "^2.12.0",
-    "babel-plugin-import": "^1.13.0",
-    "babel-plugin-styled-components": "^1.10.6"
+    "unstated-next": "^1.1.0"
   },
   "devDependencies": {
     "eslint": "^6.7.2",
